--- a/shoppingcart/pom.xml
+++ b/shoppingcart/pom.xml
@@ -112,6 +112,11 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.2.9.RELEASE</version>
+        </dependency>
         <!-- SECURITY DEPENDENCIES END -->
         <!-- SECURITY DEPENDENCIES END -->
     </dependencies>
